# low-latent

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: benchmark.cpp
config/: default.cfg
data/: sample_replay.csv
docs/: architecture.md  architecture_diagram.mmd  benchmark_report.md  performance_analysis.md
examples/: workload_trace.csv
include/cerebro/: async_logger.hpp  cli.hpp  engine.hpp  lock_free_queue.hpp  market_data_generator.hpp  matching_engine.hpp  order_book.hpp  packet_decoder.hpp  price.hpp  risk_engine.hpp  statistics_engine.hpp  thread_safe_queue.hpp  types.hpp
include/cerebrox/: advisor.hpp  cli.hpp  collector.hpp  controller.hpp  predictor.hpp  system_snapshot.hpp  types.hpp
src/: main.cpp
src/cerebro/: async_logger.cpp  cli.cpp  engine.cpp  market_data_generator.cpp  matching_engine.cpp  order_book.cpp  packet_decoder.cpp  risk_engine.cpp  statistics_engine.cpp
src/cerebrox/: advisor.cpp  cli.cpp  collector.cpp  controller.cpp  predictor.cpp  system_snapshot.cpp
tests/: test_decoder.cpp  test_matching_engine.cpp  test_order_book.cpp  test_risk_engine.cpp
